Publicado a Azure App Service bodegaWSREST20220213174454

--- a/bodegaWSREST/bodegaWSREST.csproj
+++ b/bodegaWSREST/bodegaWSREST.csproj
@@ -126,6 +126,7 @@
       <DependentUpon>BodegaModel.edmx</DependentUpon>
     </Content>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\bodegaWSREST20220213174454 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
